--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hubot-sentimental": "~1.0.3",
     "hubot-slack": "~2.1.1",
     "hubot-twitter": "~2.1.1",
+    "hubot-twitter-userstream": "0.0.2",
     "wolfram": "^0.3.0",
     "xml2js": "~0.4.4"
   },
