--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hubot-sentimental": "~1.0.3",
     "hubot-slack": "~2.1.1",
     "hubot-twitter": "~2.1.1",
+    "hubot-twitter-adapter": "^1.3.1",
     "hubot-twitter-userstream": "0.0.2",
     "scraper": "0.0.9",
     "wolfram": "^0.3.0",
