--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hosted-hubot",
-  "version": "2.7.1",
+  "version": "2.7.3",
   "private": true,
   "author": "GitHub Inc.",
   "keywords": [
@@ -27,7 +27,7 @@
     "hubot-sentimental": "~1.0.3",
     "hubot-slack": "~2.1.1",
     "hubot-twitter": "~2.1.1",
-    "hubot-twitter-adapter": "^1.3.1",
+    "hubot-twitter-adapter": ">=2.0.0",
     "hubot-twitter-userstream": "0.0.2",
     "scraper": "0.0.9",
     "wolfram": "^0.3.0",
